박우식 추가

--- a/Main.html
+++ b/Main.html
@@ -1,21 +1,82 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="Main.css">
-    <title>IKEA</title>
+    <link rel="stylesheet" href="home_furnishing_idea.css">
+    <link rel="stylesheet" href="Footer.css">
+    <link rel="stylesheet" href="search_box.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="Banner">
-        <ul style="list-style: none;padding:0;margin:0;">
-            <li><img src="Image\ikea-logo@logotyp.us\ikea-logo@logotyp.us.png" alt="error" id="Banner_Icon"></li>
-            <li class="Other">All Product</li>
-            <li class="Other">Show Room</li>
-            <li class="Other">On Sale</li>
-            <li class="Other">New Releases</li>
-        </ul>
+    <div class="ikea_food" style="height: 64.375rem;">
+        <div style="margin:12.5em 0 0 0;padding:0;">
+            <img src="Image\ikea_food\chicken.png" width="299;" height="299;" style="position: absolute;z-index: 2;margin:21.4375em 0 0 85.375em;">
+            <img src="Image\ikea_food\salmon.png" width="297;" height="297;" style="position: absolute;z-index: 2;margin:21.4375em 0 0 64.0625em;">
+            <img src="Image\ikea_food\spagetti.png" width="299;" height="299;" style="position: absolute;z-index: 2;margin:0 0 30.9375em 85.375em;">
+            <img src="Image\ikea_food\steak.png" width="297;" height="297;" style="position: absolute;z-index: 2;margin:0 0 30.9375em 64.0625em;">
+            <div style="width: 60em;height: 14.6875em;background-color: #FBD914;margin:12.375em 0 0 60em;position:absolute;z-index: 1;"></div>
+            <div style="margin:0 0 0 15.9375em;padding-top: 10.1875em;">
+                <p style="text-align: left;font-size: 3.125rem;font-weight: bold; margin:0;">IKEA FOOD</p>
+                <p style="text-align: left;font-size: 1rem;margin:15px 0 0 0;line-height: 30px;color: #777777;">IKEA 매장에서 스웨덴의 맛을 느껴보세요. IKEA 레스토랑에서 스웨덴의 대표적인<br>
+                    메뉴와 친숙한 한식을 즐기며 잠깐 쉬어가는 건 어떨까요? 계산대 바로 다음에 있는<br>
+                    IKEA 비스트로에서는 간단한 스낵을 즐길 수도 있어요. 그리고 매장을 나서기<br>
+                    전에 IKEA 스웨덴 푸드 마켓에서 판매하는 다양한 IKEA 메뉴, 스낵, 음료도<br>
+                    잊지 말고 확인해 보세요. 그럼 맛있게 드세요!</p>
+                <div style="height: 3.625em; width: 18.5em; background-color: #FBD914;border-radius: 2.375em;margin:3.125em 0 0 0;">
+                    <p class="button1" style="float: left;margin:0.65em 0 0 1.8em;font-size: 1.3125em;font-weight:bold;">VIEW OUR MENU</p>
+                    <div style="height: 2.0625em;width: 2.0625em;border-radius: 4.6875em;background-color: #FFFFFF;float: right;margin:0.75em 0.75em 0 0;">
+                        <p style="margin:0.3em 0 0 0.59375em;padding:0;font-weight: bold;">→</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="catalogue" style="height: 51.875em;">
+        <img src="Image\catalogue\catalogue.png" width="629;" height="630;" style="position: absolute;z-index: 2;margin:0 0 12.5em 15.9375em;">
+        <div style="width: 60em;height: 14.6875em;background-color: #FBD914;margin:12.375em 0 0 0;position:absolute;z-index: 1;"></div>
+        <div style="margin:0 15.9375em 0 0;padding-top: 10.1875em;">
+            <p style="text-align: right;font-size: 3.125em;font-weight: bold; margin:0;">IKEA Digital Catalogue</p>
+            <p style="text-align: right;font-size: 1rem;margin:0.9375em 0 0 0;line-height: 1.875em;color: #777777;">홈카페, 홈트레이닝, 홈스쿨, 홈오피스까지 우리집은 멀티플레이어가 되어가고 있습니다.<br>
+            집안에서 보내는 시간이 많아지다 보니 정리가 필요한 곳들이 점점 보이기 시작하죠.<br>
+            IKEA 카탈로그 2021과 함께 집안에 있는 물건을 정리하는 다양한 방법을 만나보세요.<br>
+            "IKEA 프린트 카탈로그는 IKEA 매장 혹은 IKEA 플래닝 스튜디오에서 받아보세요.</p>
+            <div style="height: 3.625em; width: 16.125em; background-color: #FBD914;border-radius: 2.375em;margin:3.125em 0 0 87.8125em;">
+                <p class="button1" style="float: left;margin:0.7em 0 0 1.7em;font-size: 1.3125em;font-weight:bold;">VIEW ONLINE</p>
+                <div style="height: 2.0625em;width: 2.0625em;border-radius: 4.6875em;background-color: #FFFFFF;float: right;margin:0.75em 0.75em 0 0;">
+                    <p style="margin:0.25em 0 0 0.5em;padding:0;font-weight: bold;">→</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="home_furnishing_idea">
+        <p style="padding-top:100px;margin:0 0 0 255px;font-size: 38px;font-weight: bold;">HOME FURNISHING IDEA</p>
+        <p style="margin:0 0 100px 255px;font-size:20px">이케아를 사용한 다양한 홈 아이디어를 알아보세요.</p>
+        <div style="position: absolute;">
+            <img src="Image\home_furnishing_idea_images\background_image.png" width= "1920px;" height= "734px;">
+            <div style="position: absolute;">
+                <li><a href=""><img src="Image\home_furnishing_idea_images\button_icon.png" width= "34px;" height= "34px;" class="button1"></a>
+                    <div style="width: 300px; height: 300px;position: absolute;background-color: black;display: none;" class="box1">
+                    </div>
+                </li>
+                <img src="Image\home_furnishing_idea_images\button_icon.png" width= "34px;" height= "34px;" class="button2">
+                <img src="Image\home_furnishing_idea_images\button_icon.png" width= "34px;" height= "34px;" class="button3">
+                <img src="Image\home_furnishing_idea_images\button_icon.png" width= "34px;" height= "34px;" class="button4">
+            </div>
+        </div>
+    </div>
+    <div class="search_box">
+        <img src="Image\search_box\search_box.png" width= "1920px;" height= "801px;">
+        <div class="center_elements">
+            <div style="margin-bottom:20px;">
+                Join IKEA Family
+            </div>
+            <input type="text" class="input_box" placeholder="YOUR EMAIL                                                                                SUBMIT">
+            <div class="checkbox_css">
+                <input type="checkbox">
+                I've read and accept the term&conditions
+            </div>
+        </div>
     </div>
 </body>
-
 </html>
